# testbeam-analysis

./: .gitignore  Alignment.cc  Analysis.cc  CMakeLists.txt  DigiToRechits.cc  FastEfficiency.cc  Makefile  README.md  Tracking.cc  Tracks.cc  env.sh  mapping_lazy.txt  multiplicity.cc  unpacker.cc
alignment/: tracker.csv
analysis/: alignment.py  analysis.py  analyze.py  efficiency.py  ge21.py  horns.py  latency.py  occupancy.py  profiles.py  residuals.py  scan.py  strips.py  track_angles.py
analysis/calibration/: latency.py  threshold.py
analysis/scans/: efficiency.py
analysis/utils/: get_corrections.py  plot_alignment.py
include/: ChamberMapping.h  Cluster.h  Corrections.h  CsvReader.h  DataFrame.h  DetectorGeometry.h  DetectorLarge.h  DetectorTracker.h  Digi.h  Event.h  EventLinkDef.h  GEMAMC13EventFormat.h  GEMAMCEventFormat.h  Geometry.h  Hit.h  LinearFcn.h  Rechit.h  Rechit2D.h  StripMapping.h  TestBeamMapping.h  Track.h  Track2D.h
lib/: EventDict_rdict.pcm
mapping/: alignment.csv  create_mapping.py  create_mapping_ge21.py  ge21_mapping.csv  ge21_mapping_licciully.csv  hrs_connector.csv  map_hrs_to_channel.py  me0_mapping.csv  me0_mapping_hrs.csv  tracker_mapping.csv  tracker_mapping_channels_V3.csv  tracker_mapping_vfat.csv
mapping/IntegrationStand/: chamber_mapping.csv  ge21_mapping.csv
mapping/may2022/: chamber_mapping.csv  me0_mapping.csv  tracker_mapping.csv
mapping/may2022Frengo/: chamber_mapping.csv  me0_mapping.csv
mapping/nov2021/: 20x10_mapping.csv  chamber_mapping.csv
mapping/oct2021/: chamber_mapping.csv
mapping/raw/: ME0-Mapping-Empirical.xlsx  ME0-Prototype10x20-512strips-mapping.xlsx
mapping_v1/: tracker_mapping_channels.csv  tracker_mapping_channels_V2.csv  tracker_mapping_strips.csv  tracker_mapping_vfat.csv
scripts/: 20x10_hv.csv  angles.py  angles.sh  check_sync.sh  fullreco.sh  ge21_hv.csv  latency_analyzer.py  occupancy_analyzer.py  quick_efficiency.py  scan.sh  tracker_hv.csv  y_alignment.py  y_alignment.sh
scripts/alignment/: angles.sh  translation.sh
src/: ChamberMapping.cc  Cluster.cc  CsvReader.cc  DataFrame.cc  DetectorLarge.cc  DetectorTracker.cc  Digi.cc  Hit.cc  LinearFcn.cc  Rechit.cc  Rechit2D.cc  StripMapping.cc  TestBeamMapping.cc  Track.cc  Track2D.cc  tdrstyle.c
src/common/: GEMUnpacker.cc
src/dic/: EventDict.cxx  EventDict_rdict.pcm
utils/: mapping_fromraw.py
